* implemented file renaming (validation checks not yet) * implemented file movement to different folders
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@60 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_detail/_file_new_revision.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/_file_new_revision.html.erb
@@ -31,7 +31,10 @@ form_for(:dmsf_file_revision, @revision, :url => {:action => "save_file", :id =>
 					<div class="splitcontentright">
 						<p>
 							<%= label_tag("", l(:label_filename) + ":") %>
-							<%= h(@revision.name) %>
+							<%= f.select(:folder, 
+								options_for_select(DmsfHelper.directory_tree(@project), 
+									:selected => (@revision.folder.id unless @revision.folder.nil?))) %> /
+							<%= f.text_field(:name, :size => "24") %>
 						</p>
 					</div>
 				</div>
