* finished Issue 4: Document files renaming * finished Issue 36: Document/Folder move
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@65 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_detail/_file_new_revision.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/_file_new_revision.html.erb
@@ -31,8 +31,8 @@ form_for(:dmsf_file_revision, @revision, :url => {:action => "save_file", :id =>
 					<div class="splitcontentright">
 						<p>
 							<%= label_tag("", l(:label_file) + ":") %>
-							<%= f.select(:folder, 
-								options_for_select(DmsfHelper.directory_tree(@project), 
+							<%= f.select(:dmsf_folder_id, 
+								options_for_select(DmsfFolder.directory_tree(@project), 
 									:selected => (@revision.folder.id unless @revision.folder.nil?))) %> /
 							<%= f.text_field(:name, :size => "24") %>
 						</p>
