--- a/redmine_dmsf/app/views/dmsf_detail/folder_detail.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/folder_detail.html.erb
@@ -21,7 +21,7 @@
 			</div>
 			<div class="splitcontentright">
 				<p>
-					<%= label_tag("", l(:label_folder) + ":") %>
+					<%= label_tag("", l(:field_folder) + ":") %>
 					<%= f.select(:dmsf_folder_id, 
 						options_for_select(DmsfFolder.directory_tree(@project, @folder), 
 							:selected => @folder.nil? ? (@pathfolder.id unless @pathfolder.nil?) : (@folder.folder.id unless @folder.folder.nil?))) %>
