--- a/redmine_dmsf/app/views/dmsf_detail/folder_detail.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/folder_detail.html.erb
@@ -15,8 +15,8 @@
 		<div class="clear">
 			<div class="splitcontentleft">
 				<p>
-					<%= label_tag("dmsf_folder_name", l(:label_title) + ":") %>
-					<%= f.text_field(:name, :size => "32", :required => true) %>
+					<%= label_tag("dmsf_folder_title", l(:label_title) + ":") %>
+					<%= f.text_field(:title, :size => "32", :required => true) %>
 				</p>
 			</div>
 			<div class="splitcontentright">
