* reworked file upload and file revision creating
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@71 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_detail/file_detail.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/file_detail.html.erb
@@ -137,8 +137,8 @@
 				if(!window.confirm("<%= l(:question_do_you_really_want_to_delete_this_entry) %>")) event.preventDefault();
 			})
 			
-			jQuery("#fileFileUpload").change(function() {
-				if(jQuery("input[name=\"file[version]\"]:checked").val() == "same") {
+			jQuery("#file_upload").change(function() {
+				if(jQuery("input[name=\"version\"]:checked").val() == "0") {
 					jQuery("#fileMinorVersionRadio").prop("checked", true); 
 				}
 				jQuery("#fileSameVersionRadio").prop("disabled", true); 
