--- a/redmine_dmsf/app/views/dmsf_detail/_file_new_revision.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/_file_new_revision.html.erb
@@ -49,18 +49,18 @@ form_for(:dmsf_file_revision, @revision, :url => {:action => "save_file", :id =>
 						<%= label_tag("fileMinorVersionRadio", l(:label_version) + ":") %>
 					</p>
 					<div class="data clear">
-						<%= radio_button_tag("dmsf_file_revision[version]", "same", @revision.version == @file.last_revision.version, :id => "fileSameVersionRadio") %>
+						<%= radio_button_tag("version", 0, @revision.version == @file.last_revision.version, :id => "fileSameVersionRadio") %>
 						<%= @file.last_revision.major_version %>.<%= @file.last_revision.minor_version %> <%= l(:option_version_same) %><br /> 
-						<%= radio_button_tag("dmsf_file_revision[version]", "minor", 
+						<%= radio_button_tag("version", 1, 
 								@revision.major_version == @file.last_revision.major_version && @revision.minor_version != @file.last_revision.minor_version,
 								:id => "fileMinorVersionRadio") %> 
 						<%= @file.last_revision.major_version %>.<%= @file.last_revision.minor_version + 1 %> <%= l(:option_version_minor) %><br />
-						<%= radio_button_tag("dmsf_file_revision[version]", "major", @revision.major_version != @file.last_revision.major_version) %> 
+						<%= radio_button_tag("version", 2, @revision.major_version != @file.last_revision.major_version) %> 
 						<%= @file.last_revision.major_version + 1 %>.0 <%= l(:option_version_major) %><br />
 					</div>
 					<p>
-						<%= label_tag("dmsf_file_revision_workflow", l(:label_workflow) + ":") %>
-						<%= f.select(:workflow, 
+						<%= label_tag("workflow", l(:label_workflow) + ":") %>
+						<%= select_tag("workflow", 
 								options_for_select([
 										[l(:option_workflow_none), nil], 
 										[l(:option_workflow_waiting_for_approval), 1],
@@ -70,9 +70,9 @@ form_for(:dmsf_file_revision, @revision, :url => {:action => "save_file", :id =>
 				</div>
 				<div class="splitcontentright clear">
 					<p>
-						<%= label_tag("fileFileUpload", l(:label_new_content) + ":") %>
+						<%= label_tag("file_upload", l(:label_new_content) + ":") %>
 						<div class="data">
-							<%= file_field_tag("dmsf_file_revision[file]", :size => 30, :id => "fileFileUpload") %>
+							<%= file_field_tag("file_upload", :size => 30) %>
 							<br />
 							<small>
 								(<%= l(:label_max_size) %>: <%= number_to_human_size(Setting.attachment_max_size.to_i.kilobytes) %>)
