* file detail validation completed
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@74 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_detail/file_detail.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/file_detail.html.erb
@@ -151,8 +151,10 @@
 				jQuery("#newRevisionFormContentToggle").text("[+]");
 				jQuery("#newRevisionFormContent").hide();
 			});
-			jQuery("#newRevisionFormContentToggle").text("[+]");
-			jQuery("#newRevisionFormContent").hide();
+			<% if @revision.valid? %>
+				jQuery("#newRevisionFormContentToggle").text("[+]");
+				jQuery("#newRevisionFormContent").hide();
+			<% end %>
 		});
 	</script>
 <% end %>
