--- a/redmine_dmsf/app/views/dmsf_detail/_file_new_revision.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/_file_new_revision.html.erb
@@ -21,6 +21,7 @@ end
 form_for(:dmsf_file_revision, @revision, :url => {:action => "save_file", :id => @project, :file_id => @file},
 	:html => {:method=>:post, :multipart => true}) do |f|
 %>
+				<%= error_messages_for("revision") %>
 				<div class="clear">
 					<div class="splitcontentleft">
 						<p>
