* finished Issue 30: File upload strange behavior for files with same filename
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@78 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_detail/file_detail.html.erb
+++ b/redmine_dmsf/app/views/dmsf_detail/file_detail.html.erb
@@ -47,6 +47,7 @@
 <% end %>
 </h2>
 
+<%= error_messages_for("file") %>
 <%= error_messages_for("revision") %>
 
 <% if User.current.allowed_to?(:file_manipulation, @file.project) %>
@@ -155,7 +156,7 @@
 			});
 		});
 	</script>
-	<% if @revision.valid? %>
+	<% if @revision.valid? && @file.valid? %>
 	<script type="text/javascript">
 		jQuery(document).ready(function() {
 			jQuery("#newRevisionFormContentToggle").text("[+]");
