--- a/redmine_dmsf/assets/stylesheets/dmsf.css
+++ b/redmine_dmsf/assets/stylesheets/dmsf.css
@@ -1,3 +1,9 @@
+button {
+	vertical-align: middle;
+	margin-top: 1px;
+	margin-bottom: 1px;
+}
+
 /* DMSF entries list */
 table.entries tbody td, table.entries tbody tr:hover td {
 	border: solid 1px #D7D7D7;
