* finished Issue 23: Move user preferences to tab in Project settings
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@93 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_state/_user_pref.html.erb
+++ b/redmine_dmsf/app/views/dmsf_state/_user_pref.html.erb
@@ -1,10 +1,4 @@
-<% html_title(l(:dmsf)) %>
-
-<div class="contextual">
-</div>
-
-<h2><%= l(:link_user_preferences) %></h2>
-
+<p><strong><%=l(:link_user_preferences)%></strong></p>
 <div class="box">
 	<% form_tag({:controller => "dmsf_state", :action => "user_pref_save", :id => @project},
 		:method=>:post) do %>
