* moved multiupload handling to separated controller
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@97 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/_multi_upload.html.erb
+++ b/redmine_dmsf/app/views/dmsf/_multi_upload.html.erb
@@ -1,5 +1,5 @@
 <div class="box">
-	<% form_tag({:controller => "dmsf_detail", :action => "upload_files", :id => @project, :folder_id => @folder},
+	<% form_tag({:controller => "dmsf_upload", :action => "upload_files", :id => @project, :folder_id => @folder},
 		:id => "uploadform", :method=>:post, :multipart => true) do %>
 <% if Setting.attachment_max_size.to_i >= 102400 %> 
 	<div class="upload_select">
@@ -89,7 +89,7 @@
 			uploader = jQuery("div",uploader);
 			uploader.plupload({
 				runtimes : 'gears,html5,flash,html4',
-				url : '<%= url_for({:controller => "dmsf_detail", :action => "upload_file", :id => @project, :folder_id => @folder}) %>',
+				url : '<%= url_for({:controller => "dmsf_upload", :action => "upload_file", :id => @project, :folder_id => @folder}) %>',
 				max_file_size : "100mb",
 				max_file_count: '<%= Setting.plugin_redmine_dmsf["dmsf_max_file_upload"].to_i if Setting.plugin_redmine_dmsf["dmsf_max_file_upload"].to_i > 0 %>',
 				multipart: true,
