* finished controller structure rework for folders
git-svn-id: http://redmine-dmsf.googlecode.com/svn/branches/devel_0.8.0@104 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/edit.html.erb
+++ b/redmine_dmsf/app/views/dmsf/edit.html.erb
@@ -8,7 +8,7 @@
 <%= ("/ " + l(:heading_new_folder)) if create %>
 </h2>
 
-<% form_for(:dmsf_folder, @folder, :url => {:action => create ? "create_folder" : "save_folder", :id => @project, :folder_id => @folder, :parent_id => @parent},
+<% form_for(:dmsf_folder, @folder, :url => {:action => create ? "create" : "save", :id => @project, :folder_id => @folder, :parent_id => @parent},
 	:html => {:method=>:post}) do |f| %>
 	<%= error_messages_for("folder") %>
 	<div class="box dmsf_detail">
