* finished Issue 59: Don't show upload controls when no rights for it
git-svn-id: http://redmine-dmsf.googlecode.com/svn/branches/devel_0.8.0@106 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf/show.html.erb
@@ -173,8 +173,7 @@ form_tag({:action => "entries_operation", :id => @project, :folder_id => @folder
 	</div>
 	<br />
 <% end %>
-
-<%= render(:partial => "multi_upload") %>
+<%= render(:partial => "multi_upload") if User.current.allowed_to?(:file_manipulation, @project) %>
 <br />
 
 <% content_for :header_tags do %>
