* finished controller structure rework for files
git-svn-id: http://redmine-dmsf.googlecode.com/svn/branches/devel_0.8.0@107 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf_files/_file_new_revision.html.erb
+++ b/redmine_dmsf/app/views/dmsf_files/_file_new_revision.html.erb
@@ -18,7 +18,7 @@ else
 	selected_workflow = @file.last_revision.workflow
 end
 
-form_for(:dmsf_file_revision, @revision, :url => {:action => "save_file", :id => @project, :file_id => @file},
+form_for(:dmsf_file_revision, @revision, :url => {:action => "create_revision", :id => @file},
 	:html => {:method=>:post, :multipart => true}) do |f|
 %>
 				<div class="clear">
