--- a/redmine_dmsf/app/views/dmsf/show.html.erb
+++ b/redmine_dmsf/app/views/dmsf/show.html.erb
@@ -155,7 +155,7 @@ form_tag({:action => "entries_operation", :id => @project, :folder_id => @folder
 					<% end %>
 					<% if User.current.allowed_to?(:file_manipulation, @project) && !file.locked_for_user? %>
 						<%= link_to(image_tag("delete.png", :plugin => "redmine_dmsf"), 
-								{:controller => "dmsf_files", :action => "destroy", :id => file}, 
+								{:controller => "dmsf_files", :action => "delete", :id => file}, 
 								:class => "delete-link", :title => l(:title_delete)) %>
 					<% end %>
 					</div>
@@ -169,10 +169,21 @@ form_tag({:action => "entries_operation", :id => @project, :folder_id => @folder
 	<div class="controls">
 		<%= submit_tag(l(:submit_download), :title => l(:title_download_checked), :name => "download_entries") %>
 		<%= submit_tag(l(:submit_email), :title => l(:title_send_checked_by_email), :name => "email_entries") %>
-		<button type="button" id="entries_delete_button" title="<%=l(:title_delete_checked)%>"><%=l(:button_delete)%></button>
+		<% if User.current.allowed_to?(:file_manipulation, @project) %>
+			<button type="button" id="entries_delete_button" title="<%=l(:title_delete_checked)%>"><%=l(:button_delete)%></button>
+		<% end %>
 	</div>
 	<br />
 <% end %>
+
+<% content_for :header_tags do %>
+	<%= stylesheet_link_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/themes/base/jquery-ui.css" %>
+	<%= stylesheet_link_tag "plupload/jquery.ui.plupload.css", :plugin => "redmine_dmsf" %>
+	<%= stylesheet_link_tag "dmsf", :plugin => "redmine_dmsf" %>
+	
+	<%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js" %>
+<% end %>
+
 <%= render(:partial => "multi_upload") if User.current.allowed_to?(:file_manipulation, @project) %>
 <br />
 
