* validated notifications, email sending and errors
git-svn-id: http://redmine-dmsf.googlecode.com/svn/branches/devel_0.8.0@108 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/email_entries.html.erb
+++ b/redmine_dmsf/app/views/dmsf/email_entries.html.erb
@@ -10,7 +10,7 @@
 
 <h3><%= l(:heading_send_documents_by_email) %></h3>
 
-<% form_tag({:action => "email_entries_send", :id => @project, :folder_id => @folder},
+<% form_tag({:action => "entries_email", :id => @project, :folder_id => @folder},
 	{ :method=>:post, :class => "tabular"}) do %>
 <div class="box">
 	<p>
