--- a/redmine_dmsf/app/views/dmsf_mailer/files_deleted.text.html.rhtml
+++ b/redmine_dmsf/app/views/dmsf_mailer/files_deleted.text.html.rhtml
@@ -8,7 +8,7 @@
 	deleted DMSF files in project <%= @project.name %>:
   	<% @files.each do |file| %>
 	<p>
-		<%= h(file.dmsf_path_str) %>,
+		<%= h(file.dmsf_path_str) %> (<%= file.name %>),
 		<%= number_to_human_size(file.last_revision.size) %>,
 		version: <%= file.last_revision.major_version %>.<%= file.last_revision.minor_version %>
 	</p>
