--- a/redmine_dmsf/app/views/dmsf_mailer/files_updated.text.html.rhtml
+++ b/redmine_dmsf/app/views/dmsf_mailer/files_updated.text.html.rhtml
@@ -10,7 +10,7 @@
 	<p>
 		<%= link_to(h(file.dmsf_path_str),
 	        	{:only_path => false, :controller => "dmsf_files", :action => "show", :id => file,
-				:download => ""}) %>,
+				:download => ""}) %> (<%= file.name %>),
 		<%= number_to_human_size(file.last_revision.size) %>,
 		version: <%= file.last_revision.major_version %>.<%= file.last_revision.minor_version %>,
 		<%= "#{file.last_revision.workflow_str}," unless file.last_revision.workflow_str.blank? %>
