* finished Issue 58: Add description to root of DMSF
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@113 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/dmsf/edit.html.erb
+++ b/redmine_dmsf/app/views/dmsf/edit.html.erb
@@ -4,7 +4,7 @@
 </div>
 <% create = @pathfolder == @parent %>
 <h2>
-<%= render(:partial => "/dmsf/path", :locals => {:path => @pathfolder.nil? ? [] : @pathfolder.dmsf_path}) %>
+<%= render(:partial => "path", :locals => {:path => @pathfolder.nil? ? [] : @pathfolder.dmsf_path}) %>
 <%= ("/ " + l(:heading_new_folder)) if create %>
 </h2>
 
