--- a/redmine_dmsf/assets/stylesheets/dmsf.css
+++ b/redmine_dmsf/assets/stylesheets/dmsf.css
@@ -4,6 +4,10 @@ button {
 	margin-bottom: 1px;
 }
 
+.contextual img {
+	line-height: 0;
+}
+
 /* DMSF entries list */
 table.entries tbody td, table.entries tbody tr:hover td {
 	border: solid 1px #D7D7D7;
