* finished Issue 65: download via Zip with national alphabet in filename
git-svn-id: http://redmine-dmsf.googlecode.com/svn/trunk@119 5e329b0b-a2ee-ea63-e329-299493fc886d

--- a/redmine_dmsf/app/views/settings/_dmsf_settings.erb
+++ b/redmine_dmsf/app/views/settings/_dmsf_settings.erb
@@ -29,6 +29,15 @@
 				:selected => @settings["dmsf_default_notifications"])) %><br/>
   (<%=l(:label_default)%>: <%=l(:select_option_deactivated)%>)
 </p>
+
+<p>
+  <%=content_tag(:label, l(:label_zip_names_encoding) + ":") %>
+  <%=text_field_tag "settings[dmsf_zip_encoding]", @settings["dmsf_zip_encoding"], :size=>50 %><br/>
+  (<%=l(:label_default)%>: utf-8)
+  <br/>
+  <%= l(:note_zip_names_encoding_iconv) %>
+</p>
+
 <hr />
 <p>
   <%=content_tag(:label, l(:label_index_database) + ":") %>
